RESOLVED FIXED153579
[JSC] B3 Tail Call with Varargs do not restore callee saved registers
https://bugs.webkit.org/show_bug.cgi?id=153579
Summary [JSC] B3 Tail Call with Varargs do not restore callee saved registers
Benjamin Poulain
Reported 2016-01-27 20:07:25 PST
[JSC] B3 Tail Call with Varargs do not restore callee saved registers
Attachments
Patch (1.86 KB, patch)
2016-01-27 20:09 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2016-01-27 20:09:56 PST
Michael Saboff
Comment 2 2016-01-27 20:28:13 PST
Comment on attachment 270080 [details] Patch r=me
Radar WebKit Bug Importer
Comment 3 2016-01-27 20:28:32 PST
WebKit Commit Bot
Comment 4 2016-01-28 00:52:52 PST
Comment on attachment 270080 [details] Patch Clearing flags on attachment: 270080 Committed r195734: <http://trac.webkit.org/changeset/195734>
WebKit Commit Bot
Comment 5 2016-01-28 00:52:56 PST
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 6 2016-01-29 17:54:35 PST
Looks like this fix annihilated 7% win on Speedometer from enabling B3 :(
Note You need to log in before you can comment on or make changes to this bug.