[JSC] B3 Tail Call with Varargs do not restore callee saved registers https://bugs.webkit.org/show_bug.cgi?id=153579

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-01-28
Reviewed by Michael Saboff.

We were trashing the callee saved registers in Tail Calls.

I just copied the code from DFG to fix this :)

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::DFG::LowerDFGToLLVM::compileCallOrConstructVarargs):

Canonical link: https://commits.webkit.org/171660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195734 268f45cc-cd09-0410-ab3c-d52691b4dbfc